tests/ui/parser/parser-ice-ed2021-await-105210.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/parser-ice-ed2021-await-105210.rs:7:58
   |
LL |  (( h (const {( default ( await ( await (    (move {await((((}}
   |                                                    -        ^^ mismatched closing delimiter
   |                                                    |        |
   |                                                    |        unclosed delimiter
   |                                                    closing delimiter possibly meant for this

error: mismatched closing delimiter: `}`
  --> $DIR/parser-ice-ed2021-await-105210.rs:7:43
   |
LL |  (( h (const {( default ( await ( await (    (move {await((((}}
   |              -                               ^                ^ mismatched closing delimiter
   |              |                               |
   |              |                               unclosed delimiter
   |              closing delimiter possibly meant for this

error: this file contains an unclosed delimiter
  --> $DIR/parser-ice-ed2021-await-105210.rs:10:52
   |
LL | fn box () {
   |           - unclosed delimiter
LL |  (( h (const {( default ( await ( await (    (move {await((((}}
   |  --   - unclosed delimiter
   |  ||
   |  |unclosed delimiter
   |  unclosed delimiter
...
LL |
   |                                                   ^

error: aborting due to 3 previous errors

